# TattooTools

./: Dockerfile  README.md  pyproject.toml  requirments.txt
api/: app.py
api/routes/: generate_route.py
configs/: alternative_config.yaml
data/: promts.json
notebooks/: data_processing.ipynb  training_experiments.ipynb
scripts/: evaluate.py  generate.py  train.py
utils/: README.md  data_utils.py  model_utils.py  visualisation.py
